# EpiBridge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  Makefile  README.md  docker-compose.playwright.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a9e8f3c7b5d_add_definition_path_to_execution_environments.py  2ce8df4f3ba2_add_platform_settings.py  3a1b2c3d4e5f_add_ai_output_set_reviews.py  3a9e8f3c7b5e_add_build_strategy_to_analysis_bundles.py  5a9e8f3c7b60_make_execution_environment_id_nullable.py  6a9e8f3c7b61_add_validation_requests_table.py  7a9e8f3c7b62_add_user_roles_table.py  8a9e8f3c7b63_add_validation_setup_command_to_environments.py  94e35933519f_add_submission_provenance.py  b2a1c3d4e5f6_add_build_timeout_seconds.py  c2f1a4b6d8e0_add_user_updated_and_settings_changed_audit_events.py  d8e7f6c5b4a3_add_platform_setting_key_and_capability_enums.py  f9e8d7c6b5a4_add_execution_cancel_fields.py  initial_schema.py
backend/app/: cli.py  main.py
backend/app/ai/: __init__.py  base.py  context.py  ollama.py
backend/app/auth/: __init__.py  base.py  dependencies.py  firebase.py  local.py  policy.py  router.py
backend/app/builders/: __init__.py  base.py  conda.py  python.py  registry.py
backend/app/core/: config.py
backend/app/db/: enum_utils.py
backend/app/events/: governance_dispatch.py
backend/app/execution/: __init__.py  base.py  docker.py  util.py
backend/app/models/: __init__.py  ai_bundle_review.py  ai_output_set_review.py  analysis_bundle.py  audit_event.py  build_request.py  capability.py  data_resource.py  execution_environment.py  execution_image.py  execution_request.py  role.py  (+11 more)
backend/tests/: conftest.py
(+310 files in other folders)
