[project]
name = "epibridge-backend"
version = "0.1.0"
description = "EpiBridge backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.6",
    "firebase-admin>=6.6",
    "redis>=5.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
epibridge = "app.cli:main"
