[project]
name = "epibridge-backend"
version = "0.1.0"
description = "EpiBridge backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "pyyaml>=6.0",
    "docker>=7.1",
    "python-multipart>=0.0.18",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-mock>=3",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
epibridge = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: marks tests that require the full deployed stack",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402", "F401"]
# E501 is excluded for Alembic migration files because they are generated
# artefacts containing embedded SQL strings that Ruff cannot reformat.
# All other Ruff rules still apply.
"alembic/versions/*" = ["E501"]
